Added basic code for HTML
Added code from class including index, about, logbook, login, request access, project details, and project plan

--- a/2000 - Codebase/2100 - Front End/HTML/index.html
+++ b/2000 - Codebase/2100 - Front End/HTML/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elevator Project Index</title>
+    <title>Project 6 - Homepage</title>
 </head>
 <body>
+    <h1>Welcome to Project 6</h1>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="logbook.html">Logbook</a></li>
+        <li><a href="project_plan.html">Project Plan</a></li>
+        <li><a href="project_details.html">Project Plan</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="request_access.html">Signup</a></li>
+        <li><a href="http://www.google.com">Take me to Google</a></li>
+    </ul>
+    <p>Under construction, please come back later</p>
     
 </body>
 </html>
