--- a/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     
+    <?php
+    $involve = $_POST['involvement[]'];
+    foreach($involve as $each) {
+        echo $each;
+    }
+
+
 </body>
 </html>
