--- a/2000 - Codebase/2100 - Front End/HTML/login.html
+++ b/2000 - Codebase/2100 - Front End/HTML/login.html
@@ -9,9 +9,10 @@
 <body>
     <form action="../PHP/login.php" method="post">
         <h1> Login</h1>
-        <p>Username: <input type="text" name="username" /> </p>
-        <p>Password: <input type="password" name="password" /> </p>
+        <p>Username: <input type="text" name="username" required/> </p>
+        <p>Password: <input type="password" name="password" required/> </p>
         <input type="submit" />
+        <input type="image" alt="submit button" src="../Pictures/SubmitButton.png" width="150px">
         <p><a href="request_access.html">Request Access</a></p>
         
     </form>
