--- a/2000 - Codebase/2100 - Front End/HTML/request_access.html
+++ b/2000 - Codebase/2100 - Front End/HTML/request_access.html
@@ -7,6 +7,32 @@
     <title>Request Access</title>
 </head>
 <body>
-    
+    <h1>Request Access</h1>
+    <form action="../PHP/request_access.php" method="post" id="access">
+        <p>First name: <input type="text" name="firstName"></p>
+        <p>Last name: <input type="text" name="lastName"></p>
+        <p>Email: <input type="email" name="email"></p>
+        <p>DOB: <input type="date" name="DOB"></p>
+        <p>Website: <input type="url" name="Website"></p>
+
+        <label><input type="radio" name="fac_or_student" value="faculty"> Faculty </label>
+        <label><input type="radio" name="fac_or_student" value="Sudent"> Student <br/> </label>
+
+        <label><input type="checkbox" name="involvement[]" value="none"> None <br/>  </label>
+        <label><input type="checkbox" name="involvement[]" value="some"> Some <br/>  </label>
+        <label><input type="checkbox" name="involvement[]" value="lots"> Lots <br/>  </label>       
+
+        <p>Do you drive?</p>
+        <select name="driver" id="car">
+            <option value="no_answer" selected></option>
+            <option value="no">No</option>
+            <option value="yes">Yes</option>
+        </select>
+
+        <p>Tell us about yourself</p>
+        <textarea name="info" cols="30" rows="10"> Here is what I can say ... </textarea><br />
+        <input type="submit">
+
+    </form>
 </body>
 </html>
