Fixed code for new file structure

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
@@ -10,7 +10,7 @@
     <h1>Elevator Control</h1>
     <h2>Developed by 2G </h2>
 
-    <img src="../Pictures/rickroll-roll.gif" alt="">
+    <img src="../2160 - Pictures/rickroll-roll.gif">
 
     <p><input type="submit" value="Floor 3"/></p>
     <p><input type="submit" value="Floor 2"/></p>
