--- a/2000 - Codebase/2100 - Front End/2130 - HTML/logbook.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/logbook.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Logbook - Giordan</h1>
     <figure>
-        <img src="../images/michael.jpg" alt="Michael" title="Me" width="100" /> 
-        <figcaption><strong>Michael:</strong>Likes writing code</figcaption>
+        <img src="../2160 - Pictures/rickroll-roll.gif" alt="Rick" title="roll" width="100" /> 
+        <figcaption><strong>Rick:</strong>Likes rolling</figcaption>
     </figure>
     <ul>
         <li><a href="#week1">week 1</a></li>
