--- a/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Request Access</h1>
-    <form action="../PHP/request_access.php" method="post" id="access">
+    <form action="../2150 - PHP/request_access.php" method="post" id="access">
         <p>First name: <input type="text" name="firstName"></p>
         <p>Last name: <input type="text" name="lastName"></p>
         <p>Email: <input type="email" name="email"></p>
