--- a/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
@@ -7,12 +7,12 @@
     <title>Login</title>
 </head>
 <body>
-    <form action="../PHP/login.php" method="post">
+    <form action="../2150 - PHP/login.php" method="post">
         <h1> Login</h1>
         <p>Username: <input type="text" name="username" required/> </p>
         <p>Password: <input type="password" name="password" required/> </p>
         <input type="submit" />
-        <input type="image" alt="submit button" src="../Pictures/SubmitButton.png" width="150px">
+        <input type="image" alt="submit button" src="../2160 - Pictures/SubmitButton.png" width="150px">
         <p><a href="request_access.html">Request Access</a></p>
         
     </form>
