added home buttons to each page

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
@@ -14,7 +14,7 @@
         <input type="submit" />
         <input type="image" alt="submit button" src="../2160 - Pictures/SubmitButton.png" width="150px">
         <p><a href="request_access.html">Request Access</a></p>
-        
+        <a href="index.html">Home</a>
     </form>
 </body>
 </html>
