--- a/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
@@ -33,6 +33,7 @@
         <textarea name="info" cols="30" rows="10"> Here is what I can say ... </textarea><br />
         <input type="submit">
 
+        <a href="index.html">Home</a>
     </form>
 </body>
 </html>
