--- a/2000 - Codebase/2100 - Front End/2130 - HTML/logbook.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/logbook.html
@@ -107,6 +107,7 @@
 
     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
+    <a href="index.html">Home</a>
 
 </body>
 </html>
