--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Plan</title>
+
+    <link href="../CSS/ppstyle.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <a href="index.html">Home</a>
