--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
@@ -4,11 +4,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Project plan page" />
+    <meta name="robots" content="noindex nofollow" />
+    <meta name="author" content="Giordan Pellegrino" />
+    <meta name="pragma" content="no-cache" />
+    
+    <link rel="stylesheet" href="../2110 - CSS/style_project_plan.css" type="text/css">
+    
+<link>
+
+@import
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Macondo&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
     <title>Project Plan</title>
 
-    <link href="../CSS/ppstyle.css" type="text/css" rel="stylesheet"/>
 </head>
+
 <body>
+    <h1 id="ppheading" class="heading">Project Plan Breakdown - Weekly</h1>
+    <ol>
+        <li>CAN protocol design</li>
+        <a href="#">
+            <ul>
+                <li>Michael: did something. For details look <a href="logbook.html#week1">here</a></li>
+                <li>John: Did something else</li>
+            </ul>
+        </a>
+        <li>Node config</li>
+        <li>Network</li>
+        <li>Test results</li>
+        <li>UI design</li>
+        <li>UI design</li>
+        <li>UI design</li>
+        <li>Remote access</li>
+        <ul>
+            <li>Michael: did something. For details look <a href="logbook.html#week14">here</a></li>
+            <li>John: Did something else</li>
+        </ul>
+    </ol>
+
+    <h1>Gantt Chart</h1>
+    <table>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Week 1</th>
+                <th>Week 2</th>
+                <th>Week 3</th>
+                <th>Week 4</th>
+                <th> ... </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Task 1</td>
+                <td></td>
+                <td>MG</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Task 2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>AT</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Task 3</td>
+                <td colspan="2">MG</td>
+                <td></td>
+                <td>SC</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Task 4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Task 5</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Task 6</td>
+                <td></td>
+                <td></td>
+                <td>AT</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="6">Mg = Michael Galle</th>
+            </tr>
+        </tfoot>
+
+    </table>
+
+</body>
+</html>
+
     <a href="index.html">Home</a>
 </body>
 </html>
