--- a/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Project plan page" />
+    <meta name="robots" content="noindex nofollow" />
+    <meta name="author" content="Giordan Pellegrino" />
+    <meta name="pragma" content="no-cache" />
+
+    <link rel="stylesheet" href="../2110 - CSS/style_request_access.css" type="text/css" />
+
     <title>Request Access</title>
 </head>
 <body>
     <h1>Request Access</h1>
     <form action="../2150 - PHP/request_access.php" method="post" id="access">
-        <p>First name: <input type="text" name="firstName"></p>
-        <p>Last name: <input type="text" name="lastName"></p>
-        <p>Email: <input type="email" name="email"></p>
-        <p>DOB: <input type="date" name="DOB"></p>
-        <p>Website: <input type="url" name="Website"></p>
+
+        <fieldset>
+            <legend>Contact Details </legend>
+                <p>First name: <input type="text" name="firstName"></p>
+                <p>Last name: <input type="text" name="lastName"></p>
+                <p>Email: <input type="email" name="email"></p>
+                <p>DOB: <input type="date" name="DOB"></p>
+                <p>Website: <input type="url" name="Website"></p>
+        </fieldset>
 
         <label><input type="radio" name="fac_or_student" value="faculty"> Faculty </label>
         <label><input type="radio" name="fac_or_student" value="Sudent"> Student <br/> </label>
@@ -30,10 +41,11 @@
         </select>
 
         <p>Tell us about yourself</p>
-        <textarea name="info" cols="30" rows="10"> Here is what I can say ... </textarea><br />
-        <input type="submit">
+        <textarea class="text" name="info" cols="30" rows="10"> Here is what I can say ... </textarea><br />
+        <input class="submit" type="submit">
 
         <a href="index.html">Home</a>
+
     </form>
 </body>
 </html>
