Added CSS and Bootstrap to code
added a loging and moblie first sytle sheet
made changes to index and login

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
@@ -20,22 +20,22 @@
         <table>
             <tr>
                 <th>
+                    <p class="menu"><a href="login.html">Login</a></p>
                     <p class="menu"><a href="request_access.html">Signup</a></p>
                     <p class="menu"><a href="about.html">About</a></p>
                     <p class="menu"><a href="logbook.html">Logbook</a></p>
                     <p class="menu"><a href="project_plan.html">Project Plan</a></p>
                     <p class="menu"><a href="project_details.html">Project Details</a></p>
                 </th>
+                <th id="mid">
+
+                </th>
                 <th>
                     <img src="../2160 - Pictures/rickroll-roll.gif" alt="">
                 </th>
             </tr>
           </table>
-    </fieldset>
-
-    
-    <p>Under construction, please come back later</p>
-    
+    </fieldset>    
    
 </body>
 </html>
