working on Floor LEDs and website design

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
@@ -31,6 +31,7 @@
             <input id="subbtn" type="submit" value="Submit"  />
             <input type="image" id="sub" alt="submit button" src="../2160 - Pictures/SubmitButton.png" />
         </fieldset>   
+        <p><a href="index.html">Home</a></p>
         <p><a id="req_acc" href="request_access.html">Request Access</a></p>
         <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
     </form>
