--- a/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="../2110 - CSS/GUIstyle.css" type="text/css" />
+
     <title>GUI</title>
 </head>
 <body>
     <h1>Elevator Control</h1>
     <h2>Developed by 2G </h2>
-
-    <img src="../2160 - Pictures/rickroll-roll.gif">
-
-    <p><input type="submit" value="Floor 3"/></p>
-    <p><input type="submit" value="Floor 2"/></p>
-    <p><input type="submit" value="Floor 1"/></p>
+    <fieldset>
+        <p><input type="submit" value="Floor 3"/></p>
+        <p><input type="submit" value="Floor 2"/></p>
+        <p><input type="submit" value="Floor 1"/></p>
+    </fieldset>
+    
     <input type="submit" value="Dev"/>
-
     <a href="index.html">Home</a>
 
 </body>
