--- a/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
@@ -20,7 +20,8 @@
             <p class="menu"><a href="login.html">Login</a></p>
             <p class="menu"><a href="request_access.html">Signup</a></p>
             <p class="menu"><a href="about.html">About</a></p>
-            <p class="menu"><a href="logbook.html">Logbook</a></p>
+            <p class="menu"><a href="glogbook.html">Giordan's Logbook</a></p>
+            <p class="menu"><a href="g2logbook.html">Garnet's Logbook</a></p>
             <p class="menu"><a href="project_plan.html">Project Plan</a></p>
             <p class="menu"><a href="project_details.html">Project Details</a></p>
     </fieldset>    
