--- a/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="robots" content="noindex nofollow" />
+    <meta name="author" content="Giordan Pellegrino" />
+    <meta name="pragma" content="no-cache" />
     <link rel="stylesheet" href="../2110 - CSS/GUIstyle.css" type="text/css" />
 
     <title>GUI</title>
