--- a/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="robots" content="noindex nofollow" />
+    <meta name="author" content="Giordan Pellegrino" />
+    <meta name="pragma" content="no-cache" />
     <!-- Ensure page is reloaded every time - see: https://stackoverflow.com/questions/49547/how-do-we-control-web-page-caching-across-all-browsers  -->
     <!--<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
