Auto stash before merge of "dev" and "origin/dev"

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex nofollow" />
     <meta name="author" content="Giordan Pellegrino" />
-    <meta name="pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <link rel="stylesheet" href="../2110 - CSS/GUIstyle.css" type="text/css" />
 
     <title>GUI</title>
