--- a/2000 - Codebase/2100 - Front End/2130 - HTML/glogbook.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/glogbook.html
@@ -1,118 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Giordan Pellegrino" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <title>Giordan's logbook</title>
-</head>
-<body>
+
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">2GElevator Project</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="menu"><a href="login.html">Login</a></li>
+          <li class="menu"><a href="request_access.html">Signup</a></li>
+          <li class="menu"><a href="about.html">About</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#"
+              >Logbooks <span class="caret"></span
+            ></a>
+            <ul class="dropdown-menu">
+              <li class="menu">
+                <a href="g2logbook.html">Garnet's Logbook</a>
+              </li>
+            </ul>
+          </li>
+          <li class="menu"><a href="project_plan.html">Project Plan</a></li>
+          <li class="menu">
+            <a href="project_details.html">Project Details</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </head>
+  <body>
     <h1>Logbook - Giordan</h1>
     <figure>
-        <img src="../2160 - Pictures/rickroll-roll.gif" alt="Rick" title="roll" width="100" /> 
-        <figcaption><strong>Rick:</strong>Likes rolling</figcaption>
+      <img
+        src="../2160 - Pictures/rickroll-roll.gif"
+        alt="Rick"
+        title="roll"
+        width="100"
+      />
+      <figcaption><strong>Rick:</strong>Likes rolling</figcaption>
     </figure>
     <ul>
-        <li><a href="#week1">week 1</a></li>
-        <li><a href="#week2">week 2</a></li>
-        <li><a href="#week3">week 3</a></li>
-        <li><a href="#week4">week 4</a></li>
-        <li> ... </li>
-        <li><a href="#week14">week 14</a></li>
+      <li><a href="#week1">week 1</a></li>
+      <li><a href="#week2">week 2</a></li>
+      <li><a href="#week3">week 3</a></li>
+      <li><a href="#week4">week 4</a></li>
+      <li>...</li>
+      <li><a href="#week14">week 14</a></li>
     </ul>
 
     <h2 id="week1">Week 1</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week2">Week 2</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week3">Week 3</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week4">Week 4</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week5">Week 5</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week6">Week 6</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week7">Week 7</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week8">Week 8</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week9">Week 9</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week10">Week 10</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week11">Week 11</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week12">Week 12</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week13">Week 13</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
     <h2 id="week14">Week 14</h2>
     <ul>
-        <li>Worked to develop CAN messaging</li>
-        <li>Had issues ....</li>
+      <li>Worked to develop CAN messaging</li>
+      <li>Had issues ....</li>
     </ul>
 
-    <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
     <a href="index.html">Home</a>
-
-</body>
+  </body>
 </html>
