Added more Bootstrap to index page

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
@@ -28,41 +28,103 @@
           <a class="navbar-brand" href="#">2GElevator Project</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="menu"><a href="login.html">Login</a></li>
-          <li class="menu"><a href="request_access.html">Signup</a></li>
-          <li class="menu"><a href="about.html">About</a></li>
+          <li class="nav-item"><a class="menu" href="about.html">About</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"
               >Logbooks <span class="caret"></span
             ></a>
             <ul class="dropdown-menu">
-              <li class="menu">
-                <a href="glogbook.html">Giordan's Logbook</a>
+              <li class="nav-item">
+                <a class="menu" href="glogbook.html">Giordan's Logbook</a>
               </li>
-              <li class="menu">
-                <a href="g2logbook.html">Garnet's Logbook</a>
+              <li class="nav-item">
+                <a class="menu" href="g2logbook.html">Garnet's Logbook</a>
               </li>
             </ul>
           </li>
-          <li class="menu"><a href="project_plan.html">Project Plan</a></li>
-          <li class="menu">
+          <li class="nav-item"><a class="menu" href="project_plan.html">Project Plan</a></li>
+          <li class="nav-item">
             <a href="project_details.html">Project Details</a>
           </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a class="menu" href="login.html">Login</a></li>
+          <li class="nav-item"><a class="menu" href="request_access.html">Signup</a></li>
         </ul>
       </div>
     </nav>
   </head>
   <body>
     <h1>Elevator Project</h1>
-    <fieldset>
-      <legend>Welcome to Project 6</legend>
-      <p class="listMenu"><a href="login.html">Login</a></p>
-      <p class="listMenu"><a href="request_access.html">Signup</a></p>
-      <p class="listMenu"><a href="about.html">About</a></p>
-      <p class="listMenu"><a href="glogbook.html">Giordan's Logbook</a></p>
-      <p class="listMenu"><a href="g2logbook.html">Garnet's Logbook</a></p>
-      <p class="listMenu"><a href="project_plan.html">Project Plan</a></p>
-      <p class="listMenu"><a href="project_details.html">Project Details</a></p>
-    </fieldset>
+    <div class="row">
+      <div class="column">
+        <img
+          src="../2160 - Pictures/rickroll-roll.gif"
+          alt="left"
+          style="width: 100%"
+        />
+      </div>
+      <div class="column">
+        <fieldset style="width: 100%">
+          <legend>Welcome to Project 6</legend>
+          <a
+            href="login.html"
+            class="btn btn-primary btn-lg btn-block active"
+            role="button"
+            aria-pressed="true"
+            >Login</a
+          >
+          <a
+            href="request_access.html"
+            class="btn btn-primary btn-lg btn-block active"
+            role="button"
+            aria-pressed="true"
+            >Signup</a
+          >
+          <a
+            href="about.html"
+            class="btn btn-primary btn-lg btn-block active"
+            role="button"
+            aria-pressed="true"
+            >About</a
+          >
+          <a
+            href="glogbook.html"
+            class="btn btn-primary btn-lg btn-block active"
+            role="button"
+            aria-pressed="true"
+            >Giordan's Logbook</a
+          >
+          <a
+            href="g2logbook.html"
+            class="btn btn-primary btn-lg btn-block active"
+            role="button"
+            aria-pressed="true"
+            >Garnet's Logbook</a
+          >
+          <a
+            href="project_plan.html"
+            class="btn btn-primary btn-lg btn-block active"
+            role="button"
+            aria-pressed="true"
+            >Project Plan</a
+          >
+          <a
+            href="project_details.html"
+            class="btn btn-primary btn-lg btn-block active"
+            role="button"
+            aria-pressed="true"
+            >Project Details</a
+          >
+        </fieldset>
+      </div>
+      <div class="column">
+        <img
+          src="../2160 - Pictures/rickroll-roll.gif"
+          alt="right"
+          style="width: 100%"
+        />
+      </div>
+    </div>
   </body>
 </html>
