--- a/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/login.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">2GElevator Project</a>
+          <a class="navbar-brand" href="about.html">2GElevator Project</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="menu"><a href="login.html">Login</a></li>
