--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
@@ -93,7 +93,7 @@
             <tr>
                 <td>Task 1</td>
                 <td></td>
-                <td>MG</td>
+                <td>GP</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -103,14 +103,14 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>AT</td>
+                <td>GK</td>
                 <td></td>
             </tr>
             <tr>
                 <td>Task 3</td>
-                <td colspan="2">MG</td>
+                <td colspan="2">GK</td>
                 <td></td>
-                <td>SC</td>
+                <td>GP</td>
                 <td></td>
             </tr>
             <tr>
@@ -133,14 +133,14 @@
                 <td>Task 6</td>
                 <td></td>
                 <td></td>
-                <td>AT</td>
+                <td>GP</td>
                 <td></td>
                 <td></td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <th colspan="6">Mg = Michael Galle</th>
+                <th colspan="6">GP = Giordan Pellegrino   GK = Garnet Koebel</th>
             </tr>
         </tfoot>
 
