--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Project plan page" />
     <meta name="author" content="Giordan Pellegrino" />
+    <meta name="robots" content="noindex nofollow" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">>
@@ -150,5 +151,6 @@
 </html>
 
     <a href="index.html">Home</a>
+    <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
 </body>
 </html>
