--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_details.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_details.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Giordan Pellegrino" />
+    <meta name="robots" content="noindex nofollow" />
     <meta
       http-equiv="Cache-Control"
       content="no-cache, no-store, must-revalidate"
@@ -53,5 +54,6 @@
 
   <body>
     <a href="index.html">Home</a>
+    <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
   </body>
 </html>
