--- a/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/request_access.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Project plan page" />
     <meta name="author" content="Giordan Pellegrino" />
+    <meta name="robots" content="noindex nofollow" />
     <meta
       http-equiv="Cache-Control"
       content="no-cache, no-store, must-revalidate"
@@ -104,5 +105,6 @@
         <a href="index.html">Home</a>
       </fieldset>
     </form>
+    <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
   </body>
 </html>
