--- a/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
@@ -13,47 +13,9 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../2110 - CSS/index.css" type="text/css" />
 
     <title>Project 6 - Homepage</title>
-
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">2GElevator Project</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li class="nav-item"><a class="menu" href="about.html">About</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#"
-              >Logbooks <span class="caret"></span
-            ></a>
-            <ul class="dropdown-menu">
-              <li class="nav-item">
-                <a class="menu" href="glogbook.html">Giordan's Logbook</a>
-              </li>
-              <li class="nav-item">
-                <a class="menu" href="g2logbook.html">Garnet's Logbook</a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="menu" href="project_plan.html">Project Plan</a></li>
-          <li class="nav-item">
-            <a href="project_details.html">Project Details</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="menu" href="login.html">Login</a></li>
-          <li class="nav-item"><a class="menu" href="request_access.html">Signup</a></li>
-        </ul>
-      </div>
-    </nav>
   </head>
   <body>
     <h1>Elevator Project</h1>
@@ -69,49 +31,49 @@
         <fieldset style="width: 100%">
           <legend>Welcome to Project 6</legend>
           <a
-            href="login.html"
+            href="../2130 - HTML/login.html"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
             >Login</a
           >
           <a
-            href="request_access.html"
+            href="../2130 - HTML/request_access.html"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
             >Signup</a
           >
           <a
-            href="about.html"
+            href="../2150 - PHP/about.php"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
             >About</a
           >
           <a
-            href="glogbook.html"
+            href="../2150 - PHP/glogbook.php"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
             >Giordan's Logbook</a
           >
           <a
-            href="g2logbook.html"
+            href="../2150 - PHP/g2logbook.php"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
             >Garnet's Logbook</a
           >
           <a
-            href="project_plan.html"
+            href="../2150 - PHP/project_plan.php"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
             >Project Plan</a
           >
           <a
-            href="project_details.html"
+            href="../2150 - PHP/project_details.php"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
