adding current PHP login and authentication system
added new header for logged in.
added logged in mode for all pages
added logout page
added members only page for the GUI
added database in class work

--- a/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/GUI.html
@@ -28,7 +28,8 @@
     </fieldset>
 
     <input type="submit" value="Dev" />
-    <a href="index.html">Home</a>
+    <a href="../2150 - PHP/Index.php">Home</a>
+    <a href="../../2200 - Back End/Authentication/logout.php">Logout</a>
     <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
   </body>
 </html>
