--- a/2000 - Codebase/2100 - Front End/2130 - HTML/g2logbook.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/g2logbook.html
@@ -73,7 +73,7 @@
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-    <a href="index.html">Home</a>
+    <a href="../2150 - PHP/Index.php">Home</a>
     <p>Copyright &copy Garnet Koebel</p>
   </body>
 </html>
