--- a/2000 - Codebase/2100 - Front End/2130 - HTML/headerlogin.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/headerlogin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,15 +8,16 @@
     <meta name="description" content="Project plan page" />
     <meta name="author" content="Giordan Pellegrino" />
     <meta name="robots" content="noindex nofollow" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />        <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
+
     <title>Document</title>
-   
+
 </head>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -28,7 +30,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Logbooks <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li class="nav-item">
-                        <a class="menu" href="../../2100 - Front End/2150 - PHP/glogbook.php">Giordan's Logbook</a>
+                        <a class="menu" href="../../2100 - Front End/150 - PHP/glogbook.php">Giordan's Logbook</a>
                     </li>
                     <li class="nav-item">
                         <a class="menu" href="../../2100 - Front End/2150 - PHP/g2logbook.php">Garnet's Logbook</a>
@@ -41,13 +43,15 @@
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item"><a class="menu" href="../../2100 - Front End/2150 - PHP/login.php">Login</a></li>
-            <li class="nav-item"><a class="menu" href="../../2100 - Front End/2130 - HTML/request_access.html">Signup</a></li>
+            <li class="nav-item"><a class="menu" href="../../2100 - Front End/2150 - PHP/member.php">GUI</a></li>
+            <li class="nav-item"><a class="menu" href="../../2200 - Back End/Authentication/logout.php">Logout</a></li>
         </ul>
     </div>
 
 </nav>
+
 <body>
-    
+
 </body>
+
 </html>
