--- a/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/index.html
@@ -31,14 +31,14 @@
         <fieldset style="width: 100%">
           <legend>Welcome to Project 6</legend>
           <a
-            href="../2130 - HTML/login.html"
+            href="../2150 - PHP/login.php"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
             >Login</a
           >
           <a
-            href="../2130 - HTML/request_access.html"
+            href="../2150 - PHP/request_access.php"
             class="btn btn-primary btn-lg btn-block active"
             role="button"
             aria-pressed="true"
