--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_plan.html
@@ -9,11 +9,8 @@
     <meta name="robots" content="noindex nofollow" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">>
-    
-<link>
+    <meta http-equiv="Expires" content="0">
 
-@import
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -117,7 +114,7 @@
 </body>
 </html>
 
-    <a href="index.html">Home</a>
+    <a href="../2150 - PHP/Index.php">Home</a>
     <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
 </body>
 </html>
