--- a/2000 - Codebase/2100 - Front End/2130 - HTML/dev.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/dev.html
@@ -51,12 +51,7 @@
     </nav>
   </head>
   <body>
-    <input
-      type="image"
-      id="sub"
-      alt="submit button"
-      src="../2160 - Pictures/SubmitButton.png"
-    />
+    <input type="image" id="sub" alt="submit button" src="../2160 - Pictures/SubmitButton.png"/>
     <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
   </body>
 </html>
