--- a/2000 - Codebase/2100 - Front End/2130 - HTML/project_details.html
+++ b/2000 - Codebase/2100 - Front End/2130 - HTML/project_details.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <a href="index.html">Home</a>
+    <a href="../2150 - PHP/Index.php">Home</a>
     <p>Copyright &copy Giordan Pellegrino & Garnet Koebel</p>
   </body>
 </html>
